[tool.poetry]
name = "helio"
version = "0.2.0"
description = "Helio is a tool designed to help professionals who work with relational databases, facilitating the creation of SQL scripts to carry out migrations in backend projects."
authors = ["Gabriel Mango <gabrielhmango@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
unidecode = "^1.3.7"


[tool.poetry.group.dev.dependencies]
prospector = "^1.10.3"
pytest = "^7.4.3"
pip-audit = "^2.6.2"
isort = "^5.13.2"
mkdocs = "^1.5.3"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
